--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,8 @@
         <a class="navbar-brand" href="/">
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRt71WkquX6XSQKbD-cpx989SeZJJf8krli0a6g251Lm7Wy_qZVS7kMLOGb5dMjV_idC58&usqp=CAU"
                 width="90" height="90" alt="">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRUHE_CS1qoGS22oePkFFpAzzLFLx3xE7-hdOaHpJFFeFGloz3vcI89Z9uuyaUftWKhk5k&usqp=CAU"
+                width="90" height="90" alt="">
             </h1>Universidade do Minho</h1>
         </a>
     </nav>
