--- a/templates/index.html
+++ b/templates/index.html
@@ -2,5 +2,28 @@
 {% block content%}
 <div style="text-align:center">
     <h1>Bem vindo ao nosso portal</h1>
+    <p></p>
+    <img src="https://i0.wp.com/www.sabra.org.br/site/wp-content/uploads/2019/05/matematica-e-musica-como-relacionar-os-dois-20181024171547.jpg.jpg?fit=800%2C533&ssl=1"
+        width="800" height="533" alt="">
+    <p></p>
 </div>
+<div class="container">
+    <h4> Resumo </h4>
+    <p></p>
+    <p> A aplicação é uma ferramenta de auxílio ao aprendizado de matemática para alunos universitários. </p>
+
+    <p> Ela permite a
+        visualização de gráficos e teoremas de diversas áreas da matemática, como cálculo, álgebra, análise,
+        estatística, entre outras.</p>
+
+    <p>Com a ajuda da aplicação, os alunos podem explorar conceitos matemáticos de forma interativa e visual, o que
+        facilita a compreensão e a memorização desses conceitos.</p>
+
+    <p> A aplicação oferece uma ampla variedade de recursos,
+        como animações, gráficos, exemplos entre outros. </p>
+    <p></p>
+
+</div>
+
+
 {% endblock %}
