--- a/templates/index.html
+++ b/templates/index.html
@@ -9,20 +9,21 @@
 </div>
 <div class="container">
     <h4> Resumo </h4>
-    <p></p>
-    <p> A aplicação é uma ferramenta de auxílio ao aprendizado de matemática para alunos universitários. </p>
+    <div class="card-body">
+        <p></p>
+        <p> A aplicação é uma ferramenta de auxílio ao aprendizado de matemática para alunos universitários. </p>
 
-    <p> Ela permite a
-        visualização de gráficos e teoremas de diversas áreas da matemática, como cálculo, álgebra, análise,
-        estatística, entre outras.</p>
+        <p> Ela permite a
+            visualização de gráficos e teoremas de diversas áreas da matemática, como cálculo, álgebra, análise,
+            estatística, entre outras.</p>
 
-    <p>Com a ajuda da aplicação, os alunos podem explorar conceitos matemáticos de forma interativa e visual, o que
-        facilita a compreensão e a memorização desses conceitos.</p>
+        <p>Com a ajuda da aplicação, os alunos podem explorar conceitos matemáticos de forma interativa e visual, o que
+            facilita a compreensão e a memorização desses conceitos.</p>
 
-    <p> A aplicação oferece uma ampla variedade de recursos,
-        como animações, gráficos, exemplos entre outros. </p>
-    <p></p>
-
+        <p> A aplicação oferece uma ampla variedade de recursos,
+            como animações, gráficos, exemplos entre outros. </p>
+        <p></p>
+    </div>
 </div>
 
 
