--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,21 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title> Portal</title>
+
+    <style>
+        .nav-item {
+            color: blue;
+            font-size: 17px;
+        }
+
+        .navbar {
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+
+        .dropdown-menu a {
+            border-radius: 50px;
+        }
+    </style>
 </head>
 
 <body>
@@ -16,6 +31,10 @@
                 width="90" height="90" alt="">
             </h1>Universidade do Minho</h1>
         </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
     </nav>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -61,7 +80,10 @@
             </form>
         </div>
     </nav>
-    <p>{%block content%}{%endblock%}</p>
+    <p>
+        {%block content%}
+        {%endblock%}
+    </p>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
