--- a/templates/index.html
+++ b/templates/index.html
@@ -46,7 +46,7 @@
     <div class="container">
         <h2 class="section-title">Experimente a Nossa Aplicação Hoje Mesmo!</h2>
         <p>Escrever resumo do rodapé</p>
-        <a href="https://www.google.pt/" class="btn btn-primary">Saiba mais</a>
+        <a href="/sabermais" class="btn btn-primary">Saiba mais</a>
     </div>
 </div>
 
