--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
             <h1>Aprenda Matemática de Forma Divertida e Interativa</h1>
             <p>Com nossa aplicação, você pode explorar conceitos matemáticos complexos de forma fácil e criativa.</p>
             <div class="hero-buttons">
-                <a href="/menu" class="btn btn-primary">Comece Agora</a>
+                <a href="/login" class="btn btn-primary">Comece Agora</a>
             </div>
         </div>
     </div>
