--- a/templates/base.html
+++ b/templates/base.html
@@ -81,12 +81,11 @@
                         <a class="dropdown-item" href="#">Outra funcao</a>
                     </div>
                 <li class="nav-item active">
-                    <a class="nav-link" href="/criadores/">Criadores</a>
+                    <a class="nav-link" href="/sabermais/">Sobre nós</a>
                 </li>
             </ul>
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="my-btn btn-primary my-2 my-sm-0" type="submit">Search</button>
+            <form class="login-button">
+                <a class="my-btn btn-primary my-2 my-sm-0" href="/login" >Login</a>
             </form>
         </div>
     </nav>
