--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
             <h1>Aprenda Matemática de Forma Divertida e Interativa</h1>
             <p>Com nossa aplicação, você pode explorar conceitos matemáticos complexos de forma fácil e criativa.</p>
             <div class="hero-buttons">
-                <a href="/login" class="btn btn-primary">Comece Agora</a>
+                <a href="/menu" class="btn btn-primary">Comece Agora</a>
             </div>
         </div>
     </div>
@@ -45,7 +45,8 @@
 <div class="cta-section">
     <div class="container">
         <h2 class="section-title">Experimente a Nossa Aplicação Hoje Mesmo!</h2>
-        <p>Escrever resumo do rodapé</p>
+        <p> Aplicação realizada no âmbito da disciplina final de lcc</p>
+
         <a href="/sabermais" class="btn btn-primary">Saiba mais</a>
     </div>
 </div>
