--- a/templates/base.html
+++ b/templates/base.html
@@ -25,24 +25,18 @@
         .my-btn {
             border-radius: 20px;
         }
-
-        .my-btn:hover {
-            transform: translateY(-3px);
-        }
     </style>
 </head>
 
 <body>
-    <nav class="navbar navbar-light bg-light">
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="/">
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRt71WkquX6XSQKbD-cpx989SeZJJf8krli0a6g251Lm7Wy_qZVS7kMLOGb5dMjV_idC58&usqp=CAU"
                 width="90" height="90" alt="">
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRUHE_CS1qoGS22oePkFFpAzzLFLx3xE7-hdOaHpJFFeFGloz3vcI89Z9uuyaUftWKhk5k&usqp=CAU"
                 width="90" height="90" alt="">
-            </h1>Universidade do Minho</h1>
         </a>
-    </nav>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -85,7 +79,7 @@
                 </li>
             </ul>
             <form class="login-button">
-                <a class="my-btn btn-primary my-2 my-sm-0" href="/login" >Login</a>
+                <a class="my-btn btn-primary" href="/login"> Login </a>
             </form>
         </div>
     </nav>
