--- a/templates/creatores.html
+++ b/templates/creatores.html
@@ -2,7 +2,7 @@
 {%block content%}
 <div class="container">
     <p> Carlos Costa</p>
-    <img src="https://scontent.flis7-1.fna.fbcdn.net/v/t39.30808-6/250927765_4475985939184782_3773582039614272248_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=PfRcy27Y3mcAX8PEq9q&_nc_oc=AQmRGjI6F0kaw19Bn39FEi6I0dHExYMAlaeOhGmKVKCfrk-UtoxeEt-_DU6MGFcYHek&_nc_ht=scontent.flis7-1.fna&oh=00_AfCT0BPUN935fNeWKN9oycP5EwoVTQ-WMNFuMA667vuE5A&oe=640FD24B"
+    <img src="../static/profile_pic.jpg"
         width="90" height="90" alt="">
     <P></P>
     <p> Bruno Fernandes</p>
