--- a/templates/new_post.html
+++ b/templates/new_post.html
@@ -9,11 +9,13 @@
     <body>
       <div class="container">
         <h1>Create New Post</h1>
-        <form method="post" action="/new-post">
+        <form method="post" action="/new-post" enctype="multipart/form-data">
           <label>Title:</label><br>
           <input type="text" name="title"><br><br>
           <label>Content:</label><br>
           <textarea name="content"></textarea><br><br>
+          <label>Upload a file:</label><br>
+          <input type="file" name="file"><br><br>
           <input type="submit" value="Submit">
         </form>
       </div>
