--- a/templates/sabermais.html
+++ b/templates/sabermais.html
@@ -34,6 +34,15 @@
     <p>Com seus recursos interativos e visuais, é uma plataforma eficaz para auxiliar os alunos no aprendizado da
         matemática
         de maneira mais fácil, intuitiva e divertida.</p>
-   
+
+</div>
+
+<div class="container">
+    <h1>Criadores</h1>
+    <p></p>
+    <p> Carlos Costa</p>
+    <img src="../static/perfis/profile_pic.jpg" width="120" height="90" alt="">
+    <P></P>
+    <p> Bruno Fernandes</p>
 </div>
 {% endblock %}
