--- a/templates/login.html
+++ b/templates/login.html
@@ -1,14 +1,16 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h2>Login</h2>
-<form method="POST" action="{{ url_for('login') }}">
-   <label>E-mail:</label>
-   <input type="text" name="email" class="form-control"><br>
-   <label>Senha:</label>
-   <input type="password" name="senha" class="form-control"><br>
-   <input type="submit" value="Login" class="btn btn-primary">
-</form>
+<div class="container">
+    <h2>Login</h2>
+    <form method="POST" action="{{ url_for('login') }}">
+        <label>E-mail:</label>
+        <input type="text" name="email" class="form-control"><br>
+        <label>Senha:</label>
+        <input type="password" name="senha" class="form-control"><br>
+        <input type="submit" value="Login" class="btn btn-primary">
+    </form>
+</div>
 
 {%endblock%}
 
