--- a/templates/post.html
+++ b/templates/post.html
@@ -3,20 +3,31 @@
 
 <!DOCTYPE html>
 <html>
+<div class="container">
 
-<head>
-  <title>{{ post[1] }}</title>
-</head>
+  <head>
+    <title>{{ post[1] }}</title>
+  </head>
 
-<body>
-  <h1>{{ post[1] }}</h1>
-  <p>{{ post[4] }}</p>
-  <p>{{ post[2] }}</p>
-  {% if post[3] %}
-  {% set file_path = post[3].split('static', 1)[-1].lstrip('\\/') %}
-  <img src="{{ '../static/' ~ file_path }}" alt="">
-  {% endif %}
-</body>
+  <body>
+
+    <h1>{{ post[1] }}</h1>
+    <p>{{ post[4] }}</p>
+    <p>{{ post[2] }}</p>
+    {% if post[3] %}
+    {% if post[3] and post[3].endswith(('jpg', 'jpeg', 'gif', 'png')) %}
+    {% set file_path = post[3].split('static', 1)[-1].lstrip('\\/') %}
+    <img src="{{ '../static/' ~ file_path }}" alt="">
+    {% elif post[3].endswith('mp4') %}
+    {% set file_path = post[3].split('static', 1)[-1].lstrip('\\/') %}
+    <video controls>
+      <source src="{{ '../static/' ~ file_path }}" type="video/mp4">
+      Seu navegador não suporta o elemento de vídeo.
+    </video>
+    {% endif %}
+    {% endif %}
+  </body>
+</div>
 
 </html>
 
