--- a/templates/base.html
+++ b/templates/base.html
@@ -1,42 +1,19 @@
 <!DOCTYPE html>
-
 <html>
 
 <head>
+    <title>Portal</title>
+    <meta charset="UTF-8">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <title> Portal</title>
-
-    <style>
-        .navbar {
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        }
-
-        .my-btn {
-            display: inline-block;
-            padding: 12px 30px;
-            font-size: 18px;
-            font-weight: 600;
-            border-radius: 5px;
-            text-align: center;
-            margin: 0 10px;
-            transition: all 0.3s ease;
-        }
-
-        .my-btn {
-            border-radius: 20px;
-        }
-    </style>
+    <link rel="stylesheet" href="../static/style.css">
 </head>
 
 <body>
-
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="/">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRt71WkquX6XSQKbD-cpx989SeZJJf8krli0a6g251Lm7Wy_qZVS7kMLOGb5dMjV_idC58&usqp=CAU"
-                width="60" height="60" alt="">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRUHE_CS1qoGS22oePkFFpAzzLFLx3xE7-hdOaHpJFFeFGloz3vcI89Z9uuyaUftWKhk5k&usqp=CAU"
-                width="60" height="60" alt="">
+            <img src="../static/images/logo_uminho.png" width="60" height="60" alt="Logo da Universidade do Minho">
+            <img src="../static/images/logo_ciencias.jpg" width="60" height="60" alt="Logo da Faculdade de Ciências">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -45,53 +22,58 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="/">Portal <span class="sr-only">(current)</span></a>
+                    <a class="nav-link nav-link-main" href="/">Portal <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item dropdown active">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                    <a class="nav-link dropdown-toggle nav-link-main" href="#" id="navbarDropdownMenuLink" role="button"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Cálculo e Análise
                     </a>
                     <div class="dropdown-menu active" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="#">Outra funcao</a>
+                        <a class="dropdown-item" href="#">Outra função</a>
                     </div>
+                </li>
                 <li class="nav-item dropdown active">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                    <a class="nav-link dropdown-toggle nav-link-main" href="#" id="navbarDropdownMenuLink" role="button"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Álgebra
                     </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="#">Outra funcao</a>
-                        <a class="dropdown-item" href="#">Outra funcao</a>
+                    <div class=" dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <a class="dropdown-item" href="#">Outra função</a>
+                        <a class="dropdown-item" href="#">Outra função</a>
                     </div>
+                </li>
                 <li class="nav-item dropdown active">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                    <a class="nav-link dropdown-toggle nav-link-main" href="#" id="navbarDropdownMenuLink" role="button"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Estatística
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="#">Outra funcao</a>
-                        <a class="dropdown-item" href="#">Outra funcao</a>
+                        <a class="dropdown-item" href="#">Outra função</a>
+                        <a class="dropdown-item" href="#">Outra função</a>
                     </div>
+                </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="/sabermais/">Sobre nós</a>
+                    <a class="nav-link nav-link-main" href="#">Análise Numérica</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link nav-link-main" href="/sabermais/">Sobre nós</a>
                 </li>
             </ul>
             {% if 'email' not in session %}
             <form class="login-button">
-                <a class="my-btn btn-primary" href="/login"> Login </a>
+                <a class="btn btn-primary" href="/login" type="button">Login</a>
             </form>
-            {%endif%}
+            {% endif %}
             {% if 'email' in session %}
             <form class="login-button">
-                <a class="my-btn btn-primary" href="/logout"> Logout </a>
+                <a class="btn btn-primary" href="/logout" type="button">Logout</a>
             </form>
-            {%endif%}
+            {% endif %}
         </div>
     </nav>
 
     {% if 'email' in session %}
-
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Navbar</a>
@@ -108,29 +90,34 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#">Link</a>
                     </li>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Action</a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                            data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Dropdown link
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        </ul>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link disabled">Disabled</a>
                     </li>
+                </ul>
             </div>
         </div>
     </nav>
     {% endif %}
 
+    <main>
+        {% block content %}
+        {% endblock%}
+    </main>
 
-
-    <p>
-        {%block content%}
-        {%endblock%}
-    </p>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
@@ -141,8 +128,5 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
 </body>
-
-
-
 
 </html>
