--- a/templates/new_post.html
+++ b/templates/new_post.html
@@ -1,24 +1,15 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <!DOCTYPE html>
-  <html>
-    <head>
-      <title>Create New Post</title>
-    </head>
-    <body>
-      <div class="container">
-        <h1>Create New Post</h1>
-        <form method="post" action="/new-post" enctype="multipart/form-data">
-          <label>Title:</label><br>
-          <input type="text" name="title"><br><br>
-          <label>Content:</label><br>
-          <textarea name="content"></textarea><br><br>
-          <label>Upload a file:</label><br>
-          <input type="file" name="file"><br><br>
-          <input type="submit" value="Submit">
-        </form>
-      </div>
-    </body>
-  </html>
+
+  <div class="container">
+    <h1>Create New Post</h1>
+    <form method="post" action="/new-post" enctype="multipart/form-data">
+      <input type="text" name="title" placeholder="Title" required><br>
+      <textarea name="content" placeholder="Content" required></textarea><br>
+      <label for="file">Upload a file:</label>
+      <input type="file" name="file" id="file"><br>
+      <input type="submit" value="Submit">
+    </form>
+  </div>
 {% endblock %}
