--- a/templates/index.html
+++ b/templates/index.html
@@ -40,6 +40,10 @@
                 </div>
             </div>
         </div>
+        <div class="image-container">
+            <img src="../static/images/logo_uminho.png" width="60" height="60" alt="Logo da Universidade do Minho">
+            <img src="../static/images/logo_ciencias.jpg" width="60" height="60" alt="Logo da Faculdade de Ciências">
+        </div>
     </div>
 </div>
 
@@ -51,5 +55,13 @@
         <a href="/sabermais" class="btn btn-primary">Saiba mais</a>
     </div>
 </div>
+
+<style>
+    .image-container {
+        display: flex;
+        justify-content: center;
+      }
+</style>
+
 
 {% endblock %}
