--- a/templates/menu.html
+++ b/templates/menu.html
@@ -9,20 +9,26 @@
 
 <body>
 
-  <ul>
-    {% for post in posts %}
-    <div class="features-section">
-      <div class="container">
-        <div class="col-lg-4 col-md-6">
+  <div class="mt-5">
+    <ul>
+      {% for post in posts %}
+        {% if loop.index0 % 3 == 0 %}
+          <div class="row justify-content-center">
+        {% endif %}
+        <div class="col-lg-4 col-md-6 mb-4">
           <div class="feature-box">
             <i class="fas fa-chalkboard"></i>
             <h3><a href="/post/{{ post[0] }}">{{ post[1] }}</a></h3>
             <p>Resumo</p>
           </div>
         </div>
-      </div>
+        {% if loop.index0 % 3 == 2 or loop.last %}
+          </div>
+        {% endif %}
       {% endfor %}
-  </ul>
+    </ul>
+  </div>
+  
 
 </body>
 
