--- a/static/style.css
+++ b/static/style.css
@@ -126,3 +126,16 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
+.custom-card {
+    max-width: 15rem;
+    margin-bottom: 1rem;
+}
+
+label {
+    display: block;
+  }
+
+textarea[name="content"] {
+    height: 400px;
+    width: 1100px;
+}
