--- a/templates/edit_post.html
+++ b/templates/edit_post.html
@@ -1,20 +1,58 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <h1>Editar Post</h1>
+
+<div class="container">
+  <h1>Create New Post</h1>
   <form method="post" enctype="multipart/form-data">
     <div class="form-group">
-      <label for="title">Título:</label>
-      <input type="text" class="form-control" id="title" name="title" value="{{ post[1] }}" required>
+      <label for="title">Title:</label>
+      <input type="text" id="title" name="title" placeholder="Title" value="{{ post[1] }}" required>
     </div>
+    
     <div class="form-group">
-      <label for="content">Conteúdo:</label>
-      <textarea class="form-control" id="content" name="content" rows="10" required>{{ post[2] }}</textarea>
+      <label for="thumbnail">Thumbnail:</label>
+      <input type="file" id="thumbnail" name="thumbnail">
     </div>
+
     <div class="form-group">
-      <label for="file">Ficheiro:</label>
-      <input type="file" class="form-control-file" id="file" name="file">
+      <label for="file">File:</label>
+      <input type="file" id="file" name="file">
     </div>
-    <button type="submit" class="btn btn-primary">Salvar</button>
+
+    <div class="form-group">
+      <label for="content">Content:</label>
+      <textarea id="content" name="content" placeholder="Content" required>{{ post[2] }}</textarea>
+    </div>
+
+    <div class="form-group">
+      <label for="author">Author:</label>
+      <input type="text" id="author" name="author" placeholder="Author" required>
+    </div>
+
+    <div class="form-group">
+      <label for="snapshots_1">Snapshots 1</label>
+      <input type="file" id="snapshots_1" name="snapshots_1">
+      <label for="snapshots_2">Snapshot 2:</label>
+      <input type="file" id="snapshots_2" name="snapshots_2">
+      <label for="snapshots_3">Snapshot 3:</label>
+      <input type="file" id="snapshots_3" name="snapshots_3">
+    </div>
+
+    <div class="form-group">
+      <label for="links">Links:</label>
+      <input type="text" id="links" name="links" placeholder="Links">
+    </div>
+
+    <div class="form-group">
+      <label for="download">Download:</label>
+      <input type="text" id="download" name="download" placeholder="Download">
+    </div>
+  
+    <button type="reset">Reset</button>
+    <button type="submit">Submit</button>
   </form>
+</div>
+
+
 {% endblock %}
