--- a/templates/new_post.html
+++ b/templates/new_post.html
@@ -9,7 +9,7 @@
       <label for="title">Title:</label>
       <input type="text" id="title" name="title" placeholder="Title" required>
     </div>
-    
+
     <div class="form-group">
       <label for="thumbnail">Thumbnail:</label>
       <input type="file" id="thumbnail" name="thumbnail">
@@ -22,7 +22,9 @@
 
     <div class="form-group">
       <label for="content">Content:</label>
-      <textarea id="content" name="content" placeholder="Content" required></textarea>
+      <textarea id="content" name="content" placeholder="Content"></textarea>
+      <script type="text/javascript" async src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML">
+      </script>
     </div>
 
     <div class="form-group">
@@ -48,11 +50,10 @@
       <label for="download">Download:</label>
       <input type="text" id="download" name="download" placeholder="Download">
     </div>
-  
+
     <button type="reset">Reset</button>
     <button type="submit">Submit</button>
   </form>
 </div>
-
 
 {% endblock %}
