--- a/templates/post.html
+++ b/templates/post.html
@@ -13,12 +13,12 @@
     {% if post[3].endswith(('jpg', 'jpeg', 'gif', 'png')) %}
     {% set file_path = post[3].split('static', 1)[-1].lstrip('\\/') %}
     <figure class="text-center">
-      <img src="{{ '../static/' ~ file_path }}" alt="">
+      <img width="320" height="240" src="{{ '../static/' ~ file_path }}" alt="">
     </figure>
     {% elif post[3].endswith('mp4') %}
     {% set file_path = post[3].split('static', 1)[-1].lstrip('\\/') %}
     <figure class="text-center">
-      <video controls>
+      <video width="320" height="240" controls>
         <source src="{{ '../static/' ~ file_path }}" type="video/mp4">
         Seu navegador não suporta o elemento de vídeo.
       </video>
@@ -31,7 +31,7 @@
       </div>
       <div class="card-body">
         <blockquote class="blockquote mb-0">
-          <p>{{ post[2] }}</p>
+          {{ post[2]|safe }}
         </blockquote>
       </div>
     </div>
