--- a/templates/base.html
+++ b/templates/base.html
@@ -166,8 +166,8 @@
     <script>
         tinymce.init({
             selector: '#content',
-            plugins: 'advlist autolink lists link image charmap print preview anchor',
-            toolbar: 'undo redo | formatselect | bold italic backcolor | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | removeformat | link image',
+            plugins: 'advlist autolink lists link image charmap print preview anchor pageembed code preview',
+            toolbar: 'undo redo | formatselect | bold italic backcolor | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | removeformat | link image | pageembed code preview',
             submit_inline: true,
             extended_valid_elements: 'script[type|src|async|defer|class],span[id|class|style]'
         });
