--- a/templates/new_post.html
+++ b/templates/new_post.html
@@ -22,7 +22,7 @@
 
     <div class="form-group">
       <label for="content">Content:</label>
-      <textarea id="content" name="content" placeholder="Content"></textarea>
+      <textarea id="content" name="content" placeholder="Content" required></textarea>
       <script type="text/javascript" async src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML">
       </script>
     </div>
