--- a/templates/edit_post.html
+++ b/templates/edit_post.html
@@ -12,12 +12,12 @@
     
     <div class="form-group">
       <label for="thumbnail">Thumbnail:</label>
-      <input type="file" id="thumbnail" name="thumbnail">
+      <input type="file" id="thumbnail" name="thumbnail" required>
     </div>
 
     <div class="form-group">
       <label for="file">File:</label>
-      <input type="file" id="file" name="file">
+      <input type="file" id="file" name="file" required>
     </div>
 
     <div class="form-group">
@@ -27,7 +27,7 @@
 
     <div class="form-group">
       <label for="author">Author:</label>
-      <input type="text" id="author" name="author" placeholder="Author" required>
+      <input type="text" id="author" name="author" placeholder="Author" value="{{ post[5] }}" required > 
     </div>
 
     <div class="form-group">
@@ -41,12 +41,12 @@
 
     <div class="form-group">
       <label for="links">Links:</label>
-      <input type="text" id="links" name="links" placeholder="Links">
+      <input type="text" id="links" name="links" placeholder="Links" value="{{ post[9] }}">
     </div>
 
     <div class="form-group">
       <label for="download">Download:</label>
-      <input type="text" id="download" name="download" placeholder="Download">
+      <input type="text" id="download" name="download" placeholder="Download" value="{{ post[10] }}">
     </div>
   
     <button type="reset">Reset</button>
