--- a/templates/post.html
+++ b/templates/post.html
@@ -37,47 +37,55 @@
       </div>
     </div>
 
-    <h4> Autor: {{post[5]}}</h4>
+    <div class="container">
 
-    <h4>Data: {{ post[11].split(' ')[0] }}</h4>
+      <br></br>
 
-    {% if post[6] or post[7] or post[8] %}
-    <div class="row mt-3">
-      {% if post[6] %}
-      <div class="col-md-4">
-        <figure class="text-center">
-          <img width="256" height="192" src="{{ '../static/' ~ post[6].split('static', 1)[-1].lstrip('\\/') }}" alt="">
-        </figure>
+      <h4> Autor: {{post[5]}}</h4>
+
+      <h4>Data: {{ post[11].split(' ')[0] }}</h4>
+
+      {% if post[6] or post[7] or post[8] %}
+      <div class="row mt-3">
+        {% if post[6] %}
+        <div class="col-md-4">
+          <figure class="text-center">
+            <img width="256" height="192" src="{{ '../static/' ~ post[6].split('static', 1)[-1].lstrip('\\/') }}"
+              alt="">
+          </figure>
+        </div>
+        {% endif %}
+
+        {% if post[7] %}
+        <div class="col-md-4">
+          <figure class="text-center">
+            <img width="256" height="192" src="{{ '../static/' ~ post[7].split('static', 1)[-1].lstrip('\\/') }}"
+              alt="">
+          </figure>
+        </div>
+        {% endif %}
+
+        {% if post[8] %}
+        <div class="col-md-4">
+          <figure class="text-center">
+            <img width="256" height="192" src="{{ '../static/' ~ post[8].split('static', 1)[-1].lstrip('\\/') }}"
+              alt="">
+          </figure>
+        </div>
+        {% endif %}
       </div>
       {% endif %}
 
-      {% if post[7] %}
-      <div class="col-md-4">
-        <figure class="text-center">
-          <img width="256" height="192" src="{{ '../static/' ~ post[7].split('static', 1)[-1].lstrip('\\/') }}" alt="">
-        </figure>
-      </div>
-      {% endif %}
+      {% if post[9] %}
+      <p>Links: <a href="{{ post[9] }}">
+          {% if post[9] | length <= 25 %} {{ post[9] }} {% else %} {{ post[9][:25] + '...' }} {% endif %} </a>
+      </p>
+      {%endif%}
 
-      {% if post[8] %}
-      <div class="col-md-4">
-        <figure class="text-center">
-          <img width="256" height="192" src="{{ '../static/' ~ post[8].split('static', 1)[-1].lstrip('\\/') }}" alt="">
-        </figure>
-      </div>
-      {% endif %}
+      {% if post[10] %}
+      <p>downloads: {{post[10]}}</p>
+      {%endif%}
     </div>
-    {% endif %}
-
-    {% if post[9] %}
-    <p>links: {{post[9]}}</p>
-    {%endif%}
-
-    {% if post[10] %}
-    <p>downloads: {{post[10]}}</p>
-    {%endif%}
-
-
 
   </article>
 
