--- a/templates/edit_post.html
+++ b/templates/edit_post.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class="container">
-  <h1>Create New Post</h1>
+  <h1>Edite Post</h1>
   <form method="post" enctype="multipart/form-data">
     <div class="form-group">
       <label for="title">Title:</label>
