--- a/templates/menu.html
+++ b/templates/menu.html
@@ -30,7 +30,7 @@
   </div>
   {% if 'tipo' in session %}
   <div class="container">
-    <p>Tem alguma sugestão que deseja ver implementada? <a href="/formulario">Clique aqui</a></p>
+    <p>Tem alguma sugestão que deseja ver implementada? <a href="/new-form">Clique aqui</a></p>
 
   </div>
   {%endif%}
