--- a/templates/admin_page.html
+++ b/templates/admin_page.html
@@ -1,6 +1,28 @@
 {% extends "base.html" %}
 {% block content %}
-<div class = "container">
+<div class="container">
     <h1>{{ usuario[1] }}</h1>
 </div>
+
+<body>
+    <div class="mt-5">
+        <ul>
+            {% for form in forms %}
+            {% if loop.index0 % 3 == 0 %}
+            <div class="row justify-content-center">
+                {% endif %}
+                <div class="col-lg-4 col-md-6 mb-4">
+                    <div class="feature-box">
+                        <i class="fas fa-chalkboard"></i>
+                        <h3><a href="/form/{{ form[0] }}">{{ form[1] }}</a></h3>
+                        <p>Resumo</p>
+                    </div>
+                </div>
+                {% if loop.index0 % 3 == 2 or loop.last %}
+            </div>
+            {% endif %}
+            {% endfor %}
+        </ul>
+    </div>
+</body>
 {%endblock%}
