--- a/templates/menu.html
+++ b/templates/menu.html
@@ -29,10 +29,15 @@
     </ul>
   </div>
   {% if 'tipo' in session %}
-  <div class="container">
-    <p>Tem alguma sugestão que deseja ver implementada? <a href="/new-form">Clique aqui</a></p>
-
+  <div class="footc">
+    <footer>
+      <div class="container">
+        <p>Tem alguma sugestão que deseja ver implementada? <a href="/new-form">Clique aqui</a></p>
+      </div>
+    </footer>
   </div>
+
+
   {%endif%}
 
 
