--- a/templates/post.html
+++ b/templates/post.html
@@ -11,7 +11,7 @@
 
     {% if post[4] %}
     {% if post[4].endswith(('jpg', 'jpeg', 'gif', 'png')) %}
-    {% set file_path = post[3].split('static', 1)[-1].lstrip('\\/') %}
+    {% set file_path = post[4].split('static', 1)[-1].lstrip('\\/') %}
     <figure class="text-center">
       <img width="320" height="240" src="{{ '../static/' ~ file_path }}" alt="">
     </figure>
@@ -47,7 +47,7 @@
 
       {% if post[6] or post[7] or post[8] %}
       <div class="row mt-3">
-        {% if post[6] %}
+        {% if post[6].endswith(('jpg', 'jpeg', 'gif', 'png')) %}
         <div class="col-md-4">
           <figure class="text-center">
             <img width="256" height="192" src="{{ '../static/' ~ post[6].split('static', 1)[-1].lstrip('\\/') }}"
@@ -56,7 +56,7 @@
         </div>
         {% endif %}
 
-        {% if post[7] %}
+        {% if post[7].endswith(('jpg', 'jpeg', 'gif', 'png')) %}
         <div class="col-md-4">
           <figure class="text-center">
             <img width="256" height="192" src="{{ '../static/' ~ post[7].split('static', 1)[-1].lstrip('\\/') }}"
@@ -65,7 +65,7 @@
         </div>
         {% endif %}
 
-        {% if post[8] %}
+        {% if post[8].endswith(('jpg', 'jpeg', 'gif', 'png')) %}
         <div class="col-md-4">
           <figure class="text-center">
             <img width="256" height="192" src="{{ '../static/' ~ post[8].split('static', 1)[-1].lstrip('\\/') }}"
