--- a/templates/edit_post.html
+++ b/templates/edit_post.html
@@ -22,7 +22,7 @@
 
     <div class="form-group">
       <label for="content">Content:</label>
-      <textarea id="content" name="content" placeholder="Content" required>{{ post[2] }}</textarea>
+      <textarea id="content" name="content" placeholder="Content">{{ post[2] }}</textarea>
     </div>
 
     <div class="form-group">
